# VanillaCNN

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.dox  README.md  TODO.txt  TODOING.txt  VanillaCNN.sln  main.cpp  test_metrics.py  todo.txt  vanilla_metrics.py
gtest/basic_tests/: CMakeLists.txt  externally_weighted_connection_test.cpp  first_check.cpp  neuron_tests.cpp  second_check.cpp  weight_test.cpp  weightless_connection_test.cpp  weights_test.cpp
gtest/basic_tests/connections_factories_tests/: externally_weighted_connections_factory_test.cpp  internally_weighted_connections_factory_test.cpp  weightless_connections_factory_test.cpp
gtest/basic_tests/connections_tests/: externally_weighted_connection_test.cpp  internally_weighted_connection_test.cpp
gtest/basic_tests/containers_connecting_tests/: containers_connecting_1_to_1.cpp  containers_connecting_1_to_all.cpp  containers_connecting_1_to_random_test.cpp
gtest/basic_tests/containers_facotries_tests/matrices_factories_tests/: internally_weighted_matrices_factory_tests.cpp  weightess_matrices_factories_tests.cpp
gtest/basic_tests/containers_facotries_tests/vectors_factories_tests/: weightless_vectors_factory_tests.cpp
gtest/basic_tests/containers_tests/matrices_tests/: internally_weighted_matrix_test.cpp  weightless_matrix.cpp
gtest/basic_tests/containers_tests/vectors_test/: weightless_vector_test.cpp
gtest/basic_tests/docker_tests/: docker_tests.cpp
gtest/basic_tests/layers_tests/1d_layers_tests/: fully_connected_layer_tests.cpp  output_layer_tests.cpp
gtest/basic_tests/layers_tests/2d_layers_tests/: convolution_layer_tests.cpp  downsampling_layer_tests.cpp  input_layer_tests.cpp
gtest/basic_tests/neurons_connecting_tests/: neurons_connecting_1_to_all_tests.cpp  neurons_connecting_1_to_area_tests.cpp
gtest/basic_tests/neurons_tests/: neuron_tests.cpp
gtest/basic_tests/prototype_layers_tests/: convolution_layer_prototype_tests.cpp  downsampling_layer_prototype_tests.cpp  fully_connected_layer_prototype_tests.cpp  input_layer_prototype_tests.cpp  output_layer_prototype_tests.cpp
src/: CMakeLists.txt
src/model/: NeuralNetwork.cpp  NeuralNetwork.h
src/model/Connection/: Connection.h  InternallyWeightedConnection.h  WeightlessConnection.cpp  WeightlessConnection.h
src/model/Connections/: Connection.cpp  Connection.h  ExternallyWeightedConnection.cpp  ExternallyWeightedConnection.h  InternallyWeightedConnection.cpp  InternallyWeightedConnection.h  WeightlessConnection.cpp  WeightlessConnection.h
src/model/Connections/ConnectionsFactories/: ConnectionsFactory.h  ExternallyWeightedConnectionsFactory.cpp  InternallyWeightedConnectionsFactory.cpp
src/model/Connections/ConnectionsSet/: ConnectionsSet.cpp  ConnectionsSet.h
src/model/ConnectionsFactories/: ConnectionsFactory.cpp  ConnectionsFactory.h  ExternallyWeightedConnectionsFactory.cpp  ExternallyWeightedConnectionsFactory.h  InternallyWeightedConnectionsFactory.cpp  InternallyWeightedConnectionsFactory.h  WeightlessConnectionsFactory.cpp  WeightlessConnectionsFactory.h
src/model/ConnectionsSet/: ConnectionsSet.cpp  ConnectionsSet.h
src/model/Containers/: Container.cpp  Container.h  IContainer2D.h  IInternallyWeightedContainer.h  IWeightlessContainer.h
src/model/Containers/ContainersConnectingStrategy/: ContainersConnecting1to1.cpp  ContainersConnecting1to1.h  ContainersConnecting1toAll.cpp  ContainersConnecting1toAll.h  ContainersConnecting1toRandom.cpp  ContainersConnecting1toRandom.h  ContainersConnectingStrategy.h
src/model/Containers/ContainersFactories/: ContainersFactory.h
src/model/Containers/Matrices/: InternallyWeightedMatrix.cpp  InternallyWeightedMatrix.h  Matrix.cpp  Matrix.h  WeightlessMatrix.cpp  WeightlessMatrix.h
src/model/Containers/Vectors/: Vector.cpp  Vector.h  WeightlessVector.cpp  WeightlessVector.h
src/model/ContainersConnectingStrategy/: ContainersConnecting1to1.cpp  ContainersConnecting1to1.h  ContainersConnecting1toAll.cpp  ContainersConnecting1toAll.h  ContainersConnecting1toRandom.cpp  ContainersConnecting1toRandom.h  ContainersConnectingStrategy.h
src/model/ContainersFactories/: ContainersFactory.h
src/model/ContainersFactories/MatricesFactories/: InternallyWeightedMatricesFactory.cpp  InternallyWeightedMatricesFactory.h  MatricesFactory.cpp  MatricesFactory.h  WeightlessMatricesFactory.cpp  WeightlessMatricesFactory.h
src/model/ContainersFactories/VectorsFactories/: VectorsFactory.h  WeightlessVectorsFactory.cpp  WeightlessVectorsFactory.h
src/model/Docker/: Docker.cpp  Docker.h
src/model/Exceptions/: Exceptions.cpp  Exceptions.h
src/model/Layers/: IConnectible.h  IPopulatible.h  IPrintable.h  Layer.cpp  Layer.h
src/model/Layers/LayerPrototypes/: ConvolutionLayer.cpp  ConvolutionLayer.h  DownsamplingLayer.cpp  DownsamplingLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  OutputLayer.cpp  OutputLayer.h  PrototypeLayer.h
src/model/Layers/Layers1D/: FullyConnectedLayer_.cpp  FullyConnectedLayer_.h  Layer1D.cpp  Layer1D.h  OutputLayer_.cpp  OutputLayer_.h  _FullyConnectedLayer.cpp  _FullyConnectedLayer.h  (+1 more)
src/model/Neurons/: ExternallyWeightedNeuron.cpp  ExternallyWeightedNeuron.h  InternallyWeightedNeuron.cpp  InternallyWeightedNeuron.h  Neuron.cpp  Neuron.h  WeightlessNeuron.cpp  WeightlessNeuron.h  Weights.cpp
src/model/NeuronsConnecting/: NeuronsConnecting1toAll.cpp  NeuronsConnecting1toAll.h  NeuronsConnecting1toArea.cpp  NeuronsConnecting1toArea.h  NeuronsConnectingStrategy.h
src/model/NeuronsConnections/: NeuronsConnecting1toAll.cpp  NeuronsConnecting1toAll.h  NeuronsConnecting1toArea.cpp  NeuronsConnecting1toArea.h  NeuronsConnectingError.h  NeuronsConnectingStrategy.cpp  NeuronsConnectingStrategy.h
src/model/NeuronsFactories/: ExternallyWeightedNeuronsFactory.cpp  InternallyWeightedNeuronsFactory.cpp  InternallyWeightedNeuronsFactory.h  WeightlessNeuronsFactory.cpp  WeightlessNeuronsFactory.h
src/model/Weights/: Weight.cpp  Weight.h  Weights.cpp  Weights.h
src/output/: ConsolePrinter.cpp  OutputSource.cpp  OutputSource.h
(+956 files in other folders)
