add_library(vanilla_lib
        model/Neurons/Neuron.cpp
        model/Neurons/Neuron.h
        model/NeuralNetwork.cpp
        model/NeuralNetwork.h
        output/ConsolePrinter.cpp
        output/ConsolePrinter.h
        output/OutputPrinter.cpp
        output/OutputPrinter.h
        output/OutputSource.cpp
        output/OutputSource.h
        model/NeuronsConnections/NeuronsConnecting1toAll.cpp
        model/NeuronsConnections/NeuronsConnecting1toAll.h
        model/NeuronsConnections/NeuronsConnecting1toArea.cpp
        model/NeuronsConnections/NeuronsConnecting1toArea.h
        model/NeuronsConnections/NeuronsConnectingStrategy.h
        model/Weights/Weights.cpp
        model/Weights/Weights.h
        model/Layers/LayerPrototypes/ConvolutionLayer.cpp
        model/Layers/LayerPrototypes/ConvolutionLayer.h
        model/Layers/LayerPrototypes/DownsamplingLayer.cpp
        model/Layers/LayerPrototypes/DownsamplingLayer.h
        model/Layers/LayerPrototypes/FullyConnectedLayer.cpp
        model/Layers/LayerPrototypes/FullyConnectedLayer.h
        model/Layers/LayerPrototypes/InputLayer.cpp
        model/Layers/LayerPrototypes/InputLayer.h
        model/Layers/LayerPrototypes/OutputLayer.cpp
        model/Layers/LayerPrototypes/OutputLayer.h
        model/Layers/LayerPrototypes/PrototypeLayer.h
        model/Layers/Layers1D/FullyConnectedLayer_.cpp
        model/Layers/Layers1D/FullyConnectedLayer_.h
        model/Layers/Layers1D/OutputLayer_.cpp
        model/Layers/Layers1D/OutputLayer_.h
        model/Layers/Layers1D/Layer1D.cpp
        model/Layers/Layers1D/Layer1D.h
        model/Layers/Layers2D/Layer2D.cpp
        model/Layers/Layers2D/Layer2D.h
        model/Layers/Layers2D/InputLayer_.cpp
        model/Layers/Layers2D/InputLayer_.h
        model/Layers/Layers2D/DownsamplingLayer_.cpp
        model/Layers/Layers2D/DownsamplingLayer_.h
        model/Layers/Layers2D/ConvolutionLayer_.cpp
        model/Layers/Layers2D/ConvolutionLayer_.h
        model/Layers/Layer.cpp
        model/Layers/Layer.h
        model/Exceptions/Exceptions.cpp
        model/Exceptions/Exceptions.h
        model/ContainersFactories/ContainersFactory.h
        model/ContainersFactories/VectorsFactories/VectorsFactory.cpp
        model/ContainersFactories/VectorsFactories/VectorsFactory.h
        model/ContainersFactories/VectorsFactories/WeightlessVectorsFactory.cpp
        model/ContainersFactories/VectorsFactories/WeightlessVectorsFactory.h
        model/ContainersFactories/MatricesFactories/MatricesFactory.cpp
        model/ContainersFactories/MatricesFactories/MatricesFactory.h
        model/ContainersFactories/MatricesFactories/InternallyWeightedMatricesFactory.cpp
        model/ContainersFactories/MatricesFactories/InternallyWeightedMatricesFactory.h
        model/ContainersFactories/MatricesFactories/WeightlessMatricesFactory.cpp
        model/ContainersFactories/MatricesFactories/WeightlessMatricesFactory.h
        model/ContainersConnectingStrategy/ContainersConnectingStrategy.h
        model/ContainersConnectingStrategy/ContainersConnecting1toRandom.cpp
        model/ContainersConnectingStrategy/ContainersConnecting1toRandom.h
        model/ContainersConnectingStrategy/ContainersConnecting1toAll.cpp
        model/ContainersConnectingStrategy/ContainersConnecting1toAll.h
        model/ContainersConnectingStrategy/ContainersConnecting1to1.cpp
        model/ContainersConnectingStrategy/ContainersConnecting1to1.h
        model/Docker/Docker.cpp
        model/Docker/Docker.h
        model/Containers/Container.cpp
        model/Containers/Container.h
        model/Containers/Vectors/Vector.cpp
        model/Containers/Vectors/Vector.h
        model/Containers/Vectors/WeightlessVector.cpp
        model/Containers/Vectors/WeightlessVector.h
        model/Containers/Matrices/InternallyWeightedMatrix.cpp
        model/Containers/Matrices/InternallyWeightedMatrix.h
        model/Containers/Matrices/Matrix.cpp
        model/Containers/Matrices/Matrix.h
        model/Containers/Matrices/WeightlessMatrix.cpp
        model/Containers/Matrices/WeightlessMatrix.h
        model/Connections/Connection.cpp
        model/Connections/Connection.h
        model/Connections/ExternallyWeightedConnection.cpp
        model/Connections/ExternallyWeightedConnection.h
        model/Connections/InternallyWeightedConnection.cpp
        model/Connections/InternallyWeightedConnection.h
        model/ConnectionsFactories/ConnectionsFactory.h
        model/ConnectionsFactories/WeightlessConnectionsFactory.cpp
        model/ConnectionsFactories/WeightlessConnectionsFactory.h
        model/Layers/IConnectible.h
        model/Layers/IPrintable.h
        model/Layers/IPopulatible.h
        model/Connections/WeightlessConnection.cpp
        model/Connections/WeightlessConnection.h
        model/ConnectionsFactories/ExternallyWeightedConnectionsFactory.cpp
        model/ConnectionsFactories/ExternallyWeightedConnectionsFactory.h
        model/ConnectionsFactories/InternallyWeightedConnectionsFactory.cpp
        model/ConnectionsFactories/InternallyWeightedConnectionsFactory.h
        model/Containers/IContainer2D.h
        model/Containers/IWeightlessContainer.h
        model/Containers/IInternallyWeightedContainer.h)


target_include_directories(vanilla_lib PUBLIC
        model
        output
        )
